cargo-features = ["edition2021"]

[package]
name = "web-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
reqwest = { version = "0.11.5" , features = ["blocking"] }
select = "0.5.0"
